--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -29,31 +29,31 @@ jobs:
     - uses: actions/checkout@v1
     - name: builds the binary
       #run: CGO_ENABLED=0 GOOS=${GOOS} ${GOBUILD} -a -installsuffix cgo -ldflags '-w -extldflags "-static"' -o ${BINARY_NAME} .
-      run: CGO_ENABLED=0 GOOS=${{ matrix.goos }} ${GOBUILD} -a -installsuffix cgo -ldflags '-w -extldflags "-static"' -o ${BINARY_NAME} .
+      run: CGO_ENABLED=0 GOOS=${{ matrix.goos }} ${GOBUILD} -a -installsuffix cgo -ldflags '-w -extldflags "-static"' -o ${BINARY_NAME}${{ matrix.os }}${{ matrix.goos }} .
       env:
         GOOS: linux # darwin
         GOBUILD: go build
         BINARY_NAME: hello_world
 
-#  login:
-#    needs: build
-# 
-#    runs-on: ubuntu-18.04
-#    steps:
-#    - name: login to dockerhub
-#    - uses: actions/docker/login@v1
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.DOCKER_USERNAME }}
-#        GITHUB_TOKEN: ${{ secrets.DOCKER_PASSWORD }}
+  dockerhublogin:
+    needs: build
+    runs-on: ubuntu-18.04
+    steps:
+    - name: login to dockerhub
+    - uses: actions/docker/login@master
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-#  push:
-#    needs: login
+#  dockerhubpush:
+#    needs: dockerhublogin
  
 #    runs-on: ubuntu-18.04
 #    steps:
 #    - name: pushes docker image to docker hub
-#    - uses: actions/docker/login@v1
+#    - uses: actions/docker/login@master
 #      env:
-#        GITHUB_TOKEN: ${{ secrets.DOCKER_USERNAME }}
-#        GITHUB_TOKEN: ${{ secrets.DOCKER_PASSWORD }}
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+#        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 #        ARGS: "push lotharschulz/hello-github-actions:${{ github.sha }}"
