--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -37,10 +37,10 @@ jobs:
 
   dockerhublogin:
     needs: build
-    runs-on: ubuntu-18.04
+    #runs-on: ubuntu-18.04
     steps:
-    - name: login to dockerhub
-    - uses: actions/docker/login@master
+    #- name: login to dockerhub
+    - uses: actions/docker/login@v1
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
