dockerhublogin step trial

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -37,7 +37,7 @@ jobs:
 
   dockerhublogin:
     needs: build
-    #runs-on: ubuntu-18.04
+    runs-on: ubuntu-18.04
     steps:
     #- name: login to dockerhub
     - uses: actions/docker/login@v1
