--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     #- name: login to dockerhub
-    - uses: actions/docker/login@v1
+    - uses: actions/docker/login@master
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
