--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -39,8 +39,8 @@ jobs:
     needs: build
     runs-on: ubuntu-18.04
     steps:
-    #- name: login to dockerhub
     - uses: actions/docker/login@master
+    - name: login to dockerhub
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -50,8 +50,8 @@ jobs:
  
     runs-on: ubuntu-18.04
     steps:
-    - name: pushes docker image to docker hub
     - uses: actions/docker/login@master
+    - name: pushes docker image to docker hub
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
