--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -41,8 +41,7 @@ jobs:
         BINARY_NAME: hello_world
 
     - uses: actions/docker/login@master
-    - name: push to docker hub
-    # github example: if: github.event_name == 'pull_request' && github.event.action == 'unassigned'
+    if: ${{ matrix.os }} == 'ubuntu-18.04'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
