--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -70,14 +70,14 @@ jobs:
     #if: matrix.os == 'ubuntu-18.04'
     # build docker image
     - uses: actions/docker/login@master
-    - name: builds the docker image
+    #- name: builds the docker image
       if: matrix.os == 'ubuntu-18.04'
       env:
         ARGS: "build -t lotharschulz/hello-github-actions:${{ github.sha }} ."
 
     # push docker image to dockerhub
     - uses: actions/docker/login@master
-    - name: push docker to dockerhub
+    #- name: push docker to dockerhub
       if: matrix.os == 'ubuntu-18.04'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
