--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -66,20 +66,32 @@ jobs:
         GOBUILD: go build
         BINARY_NAME: hello_world
 
-    # build docker image
-    - uses: actions/docker/cli@master
+    #- uses: actions/docker/cli@master
     #- name: builds the docker image
-      if: matrix.os == 'ubuntu-18.04'
-      run: echo "before build -t"
-      env:
-        ARGS: "build -t lotharschulz/hello-github-actions:${{ github.sha }} ."
+    #  if: matrix.os == 'ubuntu-18.04'
+    #  run: echo "before build -t"
+    #  env:
+    #    ARGS: "build -t lotharschulz/hello-github-actions:${{ github.sha }} ."
 
-    # push docker image to dockerhub
-    - uses: actions/docker/login@master
-    #- name: push docker to dockerhub
+    # build docker image and push
+    - uses: actions/checkout@master
+    - name: docker build and docker hub login & push
       if: matrix.os == 'ubuntu-18.04'
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        ARGS: "push lotharschulz/hello-github-actions:${{ github.sha }}"
+      run: |
+        docker build -t lotharschulz/hello-github-actions:${{ github.sha }} .
+        docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+        docker push lotharschulz/hello-github-actions:${{ github.sha }}
+        # inspired by https://gist.github.com/jonico/e18127b487d198606e31aac669262af8 @ 2019 98 19
+
+#    # push docker image to dockerhub
+#    - uses: actions/docker/login@master
+#    #- name: push docker to dockerhub
+#      if: matrix.os == 'ubuntu-18.04'
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+#        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#        ARGS: "push lotharschulz/hello-github-actions:${{ github.sha }}"
