--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,12 +59,12 @@ jobs:
       run: echo "$STEPS_CONTEXT"
 
     - uses: actions/checkout@v1
-    - name: builds the binary
+    - name: builds the binary on linux
       if: matrix.os == 'ubuntu-18.04'
       run: CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-w -extldflags "-static"' -o hello_world${{ matrix.os }}${{ matrix.goos }} .
 
     - uses: actions/checkout@v1
-    - name: builds the binary
+    - name: builds the binary on mac
       if: matrix.os == 'macOS-10.14'
       run: CGO_ENABLED=0 GOOS=darwin go build -a -installsuffix cgo -ldflags '-w -extldflags "-static"' -o hello_world${{ matrix.os }}${{ matrix.goos }} .
 
