--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,5 +30,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: lotharschulz/hello-github-actions/${{ matrix.os }}-${{ github.sha }}
+          repository: lotharschulz/hello-github-actions/${{ job }}-${{ github.sha }}
           tag_with_ref: true
