--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,6 +20,7 @@ jobs:
 # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#example-printing-context-information-to-the-log-file @ 2020 07 19      
   context information:
     needs: [benchmark, test]
+    runs-on: ubuntu-20.04
     steps:
     - name: Dump GitHub context
       env:
