--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,7 +48,7 @@ jobs:
       run: echo "$MATRIX_CONTEXT"
 
 # https://docs.github.com/en/actions/configuring-and-managing-workflows/using-environment-variables @ 2020 07 19
-  context_information:
+  context_env:
     needs: [benchmark, test]
     runs-on: ubuntu-20.04
     steps:
