debug: push_to_pkg_github_registry meta data only

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -144,13 +144,13 @@ jobs:
           echo $REPO
           FIRST_COMMIT_TIMESTAMP=$(echo $GITHUB_CONTEXT | jq -r '.event.commits[0].timestamp')
           echo $FIRST_COMMIT_TIMESTAMP
-          JUSTNOW=$(date +%Y-%m-%d-%M-%S-%N)
+          JUSTNOW=$(date +%Y-%m-%d--%H-%M-%S--%N)
           echo $JUSTNOW
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: lotharschulz/hello-github-actions/${GITHUB_RUN_ID}-${{ github.sha }}
-          tag_with_ref: true
+#      - name: Push to GitHub Packages
+#        uses: docker/build-push-action@v1
+#        with:
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#          registry: docker.pkg.github.com
+#          repository: lotharschulz/hello-github-actions/${GITHUB_RUN_ID}-${{ github.sha }}
+#          tag_with_ref: true
