--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -192,12 +192,13 @@ jobs:
     needs: [benchmark, test]
     name: Push Docker image to GitHub Packages via Docker Commands
     runs-on: ubuntu-20.04
-    env:
-      DOCKER_USERNAME: ${{ github.actor }}
-      DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-    run: |
-      d=$(date +%Y-%m-%d)
-      tag=$d-${{ matrix.os }}-${{ github.sha }}
-      docker build -t lotharschulz/hello-github-actions:$tag .
-      docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
-      docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
+    steps:
+      env:
+        DOCKER_USERNAME: ${{ github.actor }}
+        DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        d=$(date +%Y-%m-%d)
+        tag=$d-${{ matrix.os }}-${{ github.sha }}
+        docker build -t lotharschulz/hello-github-actions:$tag .
+        docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+        docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
