--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -200,6 +200,6 @@ jobs:
         run: |
           d=$(date +%Y-%m-%d)
           tag=$d-${{ matrix.os }}-${{ github.sha }}
-          docker build -t lotharschulz/hello-github-actions:$tag .
-          docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
-          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
+          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
+#          docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+#          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
